src/objects/DMAPP__Account_Political_Map_Contact__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Absolute_Weight__c</fullName>
        <formula>(CASE(DMAPP__Status__c,
&quot;Mentor&quot;, 3.1,
&quot;Enemy&quot;, 3.2,
&quot;Supporter&quot;, 2.1,
&quot;Non-Supporter&quot;, 2.2,
&quot;Neutral&quot;, 0,
&quot;Unknown&quot;, 0,
0))
+
(CASE(DMAPP__Political__c,
&quot;Inner Circle&quot;, 3,
&quot;Political Structure&quot;, 2,
&quot;Unknown&quot;, 0,
&quot;Outside Political Structure&quot;, 0,
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Absolute Weight</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Account_Relationship__c</fullName>
        <description>Determines the relationship between the Contact and the Political Map Account</description>
        <inlineHelpText>Set to Internal for Contacts in the Politcal Map Account or External for Contacts outside of the Account</inlineHelpText>
        <label>Account Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Adaptability__c</fullName>
        <label>Adaptability</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laggard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pragmatist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Always_On_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always On Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Color__c</fullName>
        <formula>IF((ISPICKVAL(DMAPP__Status__c, &quot;Supporter&quot;) || ISPICKVAL(DMAPP__Status__c, &quot;Mentor&quot;)), &quot;green&quot;,
IF((ISPICKVAL(DMAPP__Status__c, &quot;Non-Supporter&quot;) || ISPICKVAL(DMAPP__Status__c, &quot;Enemy&quot;)), &quot;red&quot;,
IF((ISPICKVAL(DMAPP__Political__c, &quot;Political Structure&quot;) || ISPICKVAL(DMAPP__Political__c, &quot;Inner Circle&quot;)), &quot;yellow&quot;,
&quot;grey&quot;
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Completed__c</fullName>
        <formula>IF(OR(
NOT(ISBLANK(TEXT(DMAPP__Adaptability__c))), 
NOT(ISBLANK(TEXT(DMAPP__Political__c))), NOT(ISBLANK(TEXT(DMAPP__Decision_Orientation__c))), 
NOT(ISBLANK(TEXT( DMAPP__Coverage__c ))),
NOT(ISBLANK(TEXT( DMAPP__Status__c )))
),
1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Political Map Contacts</relationshipLabel>
        <relationshipName>Account_Political_Map_Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Coverage__c</fullName>
        <label>Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brief contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-depth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Decision_Orientation__c</fullName>
        <label>Decision Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Note__c</fullName>
        <label>Note</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__On_Bench__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Bench</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Overall_Weight__c</fullName>
        <formula>DMAPP__Relationship_Weight__c *  DMAPP__Political_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Political_Map__c</fullName>
        <label>Political Map</label>
        <referenceTo>DMAPP__Account_Political_Map__c</referenceTo>
        <relationshipLabel>Account Political Map Contacts</relationshipLabel>
        <relationshipName>Account_Political_Map_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Political_Weight__c</fullName>
        <formula>CASE(DMAPP__Political__c,
&apos;Unknown&apos;, 0,
&apos;Outside Political Structure&apos;, 1,
&apos;Political Structure&apos;, 4,
&apos;Inner Circle&apos;, 5,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Political Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Political__c</fullName>
        <label>Political Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Political Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inner Circle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Possible_Reports_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Possible Reports To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Political Map Contacts (Possible Reports To)</relationshipLabel>
        <relationshipName>Account_Political_Map_Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Relationship_Weight__c</fullName>
        <formula>CASE(DMAPP__Status__c,
&apos;Unknown&apos;, 1,
&apos;Enemy&apos;, -5,
&apos;Non-Supporter&apos;, -3,
&apos;Neutral&apos;, 1,
&apos;Supporter&apos;, 3,
&apos;Mentor&apos;, 5,
1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Squares__c</fullName>
        <formula>MIN(6,
(CASE(DMAPP__Status__c,
&quot;Mentor&quot;, 3,
&quot;Enemy&quot;, 3,
&quot;Supporter&quot;, 2,
&quot;Non-Supporter&quot;, 2,
&quot;Neutral&quot;, 0,
&quot;Unknown&quot;, 0,
0))
+
(CASE(DMAPP__Political__c,
&quot;Inner Circle&quot;, 3,
&quot;Political Structure&quot;, 2,
&quot;Unknown&quot;, 0,
&quot;Outside Political Structure&quot;, 0,
0))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Squares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Status__c</fullName>
        <label>Your Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategy__c</fullName>
        <formula>&apos;XXX&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goto User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Political_Map_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Political Map Contact</label>
    <nameField>
        <label>Account Political Map Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Political Map Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>